--- a/src/css/style.css
+++ b/src/css/style.css
@@ -414,7 +414,7 @@ h2::after {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: calc(25% - 26px);
+  /*width: calc(25% - 26px);*/
   margin: 8px;
 }
 
@@ -436,6 +436,7 @@ h2::after {
 .main__name--country {
   color: #bfbfbf;
   padding-top: 24px;
+  width: 295px;
 }
 
 .main__homes--hotel {
