--- a/src/css/style.css
+++ b/src/css/style.css
@@ -10,7 +10,7 @@ body {
   color: #383838;
   font-family: 'Roboto', sans-serif;
   margin: 0 auto;
-  max-width: 100%;
+  max-width: 1440px;
 }
 
 a {
@@ -287,11 +287,12 @@ input[type='date'] {
   position: absolute;
   padding: 22px;
   width: 259px;
-  height: 256px;
+  min-height: 158px;
   background-color: #ffffff;
   border-radius: 8px;
   top: 115%;
   right: 16%;
+  display: none;
 }
 
 .filter__item {
@@ -313,6 +314,7 @@ input[type='date'] {
   margin-top: 28px;
   font-size: 16px;
   margin-bottom: 12px;
+
 }
 
 .filter__select {
@@ -331,9 +333,13 @@ input[type='date'] {
   padding-top: 4px;
 }
 
-.children__inf {
+.wrapper__children--inf {
   display: none;
 }
+
+/*.wrapper__select{*/
+/*  display: none;*/
+/*}*/
 
 .header__app {
   background-color: transparent;
